I worked on different tasks

--- a/assets/common.js.liquid
+++ b/assets/common.js.liquid
@@ -228,4 +228,9 @@ $(window).on("scroll", function() {
 })
 
 
+$("#sustainability-select-options").on("change", function(){
+   let value = $(this).val();
 
+   $(".sustainability-tablet .sustainability-container").hide();
+   $("#"+value).show();
+});
