--- a/snippets/sustainability_tablet.liquid
+++ b/snippets/sustainability_tablet.liquid
@@ -21,9 +21,9 @@
         <div class="sustainability-container" style="{{show}}" id="{{block.settings.title | remove: ' ' |  downcase}}"> 
             <div class="sustainability-tablet-item">
                 <div class="sustainability-tablet-image"
-                    style="background-image: url({{ block.settings.tablet_image | img_url: 'master' }});">
+                    style="background-image: url({{ block.settings.image_tablet | img_url: 'master' }});">
                         
-                    <img src="{{ block.settings.tablet_image | img_url: 'master' }}" style="visibility:hidden;" />
+                    <img src="{{ block.settings.image_tablet | img_url: 'master' }}" style="visibility:hidden;" />
                 </div>
                 <div class="sustainability-tablet-text-information">
                    <div class="sustainability-tablet-text-information__title">
