--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -1,2 +1,3 @@
 <h2>Where did it go?!?</h2> 
 We seem to have misplaced that page. Click the back button to go back from whence you came.
+{% include 'SEOManager-404' %}
