--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -3,9 +3,6 @@
 
 {%- section 'collection_content' -%}
 
-{%- section 'subscribe' -%}
-
-
 <style>
 /* Your designer can adjust these to get all kind of looks: 
 one or separate lines, active links instead of checkboxes, colors etc. */
@@ -113,4 +110,4 @@ input[type="checkbox"]:focus + label::before {
     outline: rgb(59, 153, 252) auto 5px;
 }
 
-</style>
+</style>{% include 'zendapps_recent_products' %}
