--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -28,7 +28,7 @@
                         class="input-text"
                         name="q"
                         value="{{ search.terms | escape }}"
-                        placeholder="{{ 'general.search.placeholder' | t }}"
+                        placeholder="What are you looking for?"
                         aria-label="{{ 'general.search.placeholder' | t }}"
                         >
                     <span class="input-group__btn">
