--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -16,12 +16,17 @@
 		
 	.product-card__product-info-container
 		max-width: 100%
-		width: 540px
-		min-width: 540px
+		width: 500px
+		min-width: 500px
 	
 	.product-card__slider-for-container
 		flex-shrink: 1
-		max-width: 100%        
+		max-width: 100%
+		flex: 0 0 37.5%
+		margin-left: 0
+		margin-right: 0
+		width: 37.5%
+
 
 
 	.product-card__slider-for
