--- a/web-flair/app/sass/blocks/category-banner/_category-banner.sass
+++ b/web-flair/app/sass/blocks/category-banner/_category-banner.sass
@@ -1,11 +1,16 @@
 .category-banner
 	background-size: cover
-	background-repeat: no-repeat
-	padding: 85px 0
-	text-align: center
+	background-repeat: no-repeat	
+	background-position: center
+	text-align: center	
+	min-height: auto
+	padding: 5vw 0
 
-.category-banner__title
-	font-size: 60px
-	text-transform: uppercase
-	color: #fff
-	font-family: $bold
+	&__content
+		
+    
+	&__title
+		font-size: 60px
+		text-transform: uppercase
+		color: #fff
+		font-family: $bold	
