--- a/web-flair/app/sass/blocks/menu/_menu.sass
+++ b/web-flair/app/sass/blocks/menu/_menu.sass
@@ -276,3 +276,15 @@
 
 .globomenu .globomenu-target-text
 	letter-spacing: 3px
+
+#search-menu
+	display: none
+
+	+media-breakpoint-down(xs)
+	   display: block
+
+.site-nav.list--inline
+	display: flex
+
+.globomenu-target-title
+	white-space: nowrap !important
