--- a/web-flair/app/sass/blocks/sustainability/_sustainability.sass
+++ b/web-flair/app/sass/blocks/sustainability/_sustainability.sass
@@ -65,8 +65,9 @@
 					margin-bottom: 20px		
 	
 	&-image
+		background-position: center center
 		background-repeat: no-repeat
-		background-size: contain		
+		background-size: cover		
 
 		img
 			max-width: 100%	
@@ -97,8 +98,10 @@
 					margin-bottom: 20px		
 	
 	&-image
+		background-position: center center
 		background-repeat: no-repeat
-		background-size: contain		
+		background-size: cover
+
 		width: 50%
 
 		img
