--- a/web-flair/app/sass/main.sass
+++ b/web-flair/app/sass/main.sass
@@ -115,6 +115,8 @@
 
 @import "blocks/customers/customers"
 
+@import "blocks/quick-view/quick_view"
+
 
 ////////////////////////////////////////
 
