--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -48,13 +48,16 @@
 
     {{ "shopify_common.js"  | shopify_asset_url | script_tag }}
     {{ "customer_area.js"  | shopify_asset_url | script_tag }}
-</head>
+{% include 'sca-quick-view-init' %}
+ <script src="//staticxx.s3.amazonaws.com/aio_stats_lib_v1.min.js?v=1.0"></script></head>
 
 <body class="body template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}">  
   {%- section 'header' -%}	
   <main class="main-content">	
   	<div class="{{template.name}}">
      {{ content_for_layout }}
+
+     {% section 'subscribe' %}
     </div> 
   </main>  
 
@@ -75,8 +78,6 @@
   {%- if template.name == 'collection' -%}
      {{ 'collections.js' | asset_url | script_tag }}
    
-		 <script>
-		 </script>
   {%- endif -%}
 	
 
@@ -84,5 +85,7 @@
 
 	{% include 'custom_mlfurs_collection-filter-v2' %}
 
-</body>
+{% include 'sca-quick-view-template' %} 
+ <input type="hidden" id="656565115116111114101" data-customer-id="{{ customer.id }}" data-customer-email="{{ customer.email }}" data-customer-name="{{ customer.first_name }} {{ customer.last_name }}"/></body>
 </html>
+{% include 'livechat_chat_window' %}
