--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -32,5 +32,5 @@
 	</section>
 
 	{%- assign product = current_product_selected  -%} 
-	
-  {% section 'subscribe' %}
+	 
+{% include 'zendapps_recent_products' %}
