I worked on different tasks

--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -23,6 +23,8 @@
     <!-- Custom Browsers Color End -->
 
 	  {{ 'main.min.css'  | asset_url | stylesheet_tag }}
+
+<!-- GSSTART Infinite Scroll code start. Do not change --><script type="text/javascript" src="https://gravity-apps.com/shopify/js/shopify/infinitescroll2261.js?v=e3a67e3a7fb2089d8ce9e9346ac963bd"></script> <!-- nfinite Scroll code end. Do not change GSEND -->
 </head>
 
 <body class="body">
