--- a/sections/subscribe.liquid
+++ b/sections/subscribe.liquid
@@ -7,8 +7,8 @@
 				</div>
 				<div class="col-12 col-lg-6 subscribe__right">
 					<div class="subscribe__right-left-part">
-						<div class="subscribe__right-title">Subscribe</div>
-						<div class="subscribe__right-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas voluptatibus, asperiores.</div>
+						<div class="subscribe__right-title">DON'T MISS OUT</div>
+						<div class="subscribe__right-text">Stay current with the season's hottest trends and new arrivals directly to your inbox and on social media.</div>
 					</div>
 
 					{% form 'customer', class: 'subscribe__block-input block-input' %}
