--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -170,8 +170,7 @@
 	.menu,
 	.main-nav__search-form,
 	.promo-bar,
-	.footer__bottom-right,
-	.footer__column,
+	.footer__bottom-right,	
 	.top-nav__nav-item_icon_chat,
 	.top-nav__nav-item_icon_user,
 	.top-nav__nav-item_icon_cart,
@@ -588,9 +587,15 @@
 
 	.logo
 		transform: translate(-75%, -50%)
+	
+	.footer_dynamic_menu
+		flex: 0 0 92px
+    
+	.stay_connected,	
+		flex: 0 0 182px
 
-
-
+	.footer_visit_us 
+		flex: 0 0 163px
 
 
 
@@ -608,6 +613,9 @@
 		font-size: 12px
 
 	.top-nav__nav
+		display: none
+
+	.footer__column,	
 		display: none
 
 	.main-nav__content
