--- a/web-flair/app/sass/blocks/footer/_footer.sass
+++ b/web-flair/app/sass/blocks/footer/_footer.sass
@@ -97,3 +97,10 @@
 	color: $gray-text
 	&:hover
 		color: $gray-text
+
+.stay_connected,
+.footer_visit_us 
+	flex: 0 0 200px
+
+.footer_dynamic_menu
+	flex: 0 0 180px
