--- a/web-flair/app/sass/blocks/product-info/_product-info.sass
+++ b/web-flair/app/sass/blocks/product-info/_product-info.sass
@@ -23,6 +23,8 @@
 
 .product-info__quick-link
 	margin-right: 10px
+	white-space: nowrap
+
 
 .product-info__price
 	color: #999
@@ -37,6 +39,10 @@
 
 	.spr-icon
 		font-size: 90%
+	
+	.spr-badge-starrating
+		white-space: nowrap !important
+
 
 .product-info__was__price
 	color: #000
