--- a/web-flair/app/sass/blocks/top-nav/_top-nav.sass
+++ b/web-flair/app/sass/blocks/top-nav/_top-nav.sass
@@ -17,6 +17,17 @@
 	font-family: $light
 	padding: 8px 0
 	word-spacing: 1px
+	
+.top-nav__link
+	color: #fff
+	cursor: pointer
+	text-transform: uppercase
+	text-decoration: none
+
+	&:hover
+		opacity: .5
+		text-decoration: none
+		color: #fff	
 
 .top-nav__nav-item
 	color: #fff
