--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,7 +49,9 @@
     {{ "shopify_common.js"  | shopify_asset_url | script_tag }}
     {{ "customer_area.js"  | shopify_asset_url | script_tag }}
 {% include 'sca-quick-view-init' %}
- <script src="//staticxx.s3.amazonaws.com/aio_stats_lib_v1.min.js?v=1.0"></script></head>
+ <script src="//staticxx.s3.amazonaws.com/aio_stats_lib_v1.min.js?v=1.0"></script>
+<!-- GSSTART Infinite Scroll code start. Do not change --><script type="text/javascript" src="https://gravity-apps.com/shopify/js/shopify/infinitescroll2261.js?v=e3a67e3a7fb2089d8ce9e9346ac963bd"></script> <!-- nfinite Scroll code end. Do not change GSEND -->
+</head>
 
 <body class="body template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}">  
   {%- section 'header' -%}	
@@ -86,6 +88,7 @@
 	{% include 'custom_mlfurs_collection-filter-v2' %}
 
 {% include 'sca-quick-view-template' %} 
- <input type="hidden" id="656565115116111114101" data-customer-id="{{ customer.id }}" data-customer-email="{{ customer.email }}" data-customer-name="{{ customer.first_name }} {{ customer.last_name }}"/></body>
+ <input type="hidden" id="656565115116111114101" data-customer-id="{{ customer.id }}" data-customer-email="{{ customer.email }}" data-customer-name="{{ customer.first_name }} {{ customer.last_name }}"/>
+ </body>
 </html>
 {% include 'livechat_chat_window' %}
