--- a/sections/collection_content.liquid
+++ b/sections/collection_content.liquid
@@ -5,7 +5,7 @@
 				<div class="col-12">
 					<div class="main-category__top-panel">
 						<div class="main-category__filter-handler filter-handler">
-							<div class="filter-handler__burger filter-handler__burger_open">
+							<div class="filter-handler__burger">
 								<span></span>
 								<span></span>
 								<span></span>
@@ -44,11 +44,11 @@
 
 			<div class="row">
 			    
-				<div class="col-lg-3 main-category__filter-container">
-				   <div class="filter collection-filters-container cf-select-wrapper cf-select-wrapper" style="padding-bottom: 0;">
+				<div class="col-lg-3 main-category__filter-container" style="display:none">
+				   <div class="filter collection-filters-container cf-select-wrapper cf-select-wrapper" style="display:none">
 				   </div>
 
-					<div class="filter" style="padding-top: 0;">
+					<div class="filter" style="padding-top: 0; display:none">
                         <div class="filter__item">
 						   <div class="filter__item-title filter__item_collections">COLLECTIONS</div>						
 								<div class="filter__item-menu">
