--- a/snippets/product_detail.liquid
+++ b/snippets/product_detail.liquid
@@ -20,14 +20,20 @@
         <div class="product__body">
             <div class="d-flex justify-content-between">
                 <div class="product__size">
-                  <a class="product__size__link" href="{{product.url}}">
-                      {{product.metafields.custom_fields["designer"]}}
-                  </a> 
+                  {{product.metafields.custom_fields["designer"]}}
                 </div>
                 <div class="product__swatches d-flex">{% include 'swatches_product' %}</div>                        
             </div> 
-            <div class="product__descr">{{product.title | scape}}</div>
+            <div class="product__descr">
+                <div class="product__descr">
+                    <a class="product__descr__link" href="{{product.url}}">
+                        {{product.title | scape}}       
+                    </a> 
+                </div>
+            </div>
             <div class="product__price">{{product.price | money}}</div>            
             <div class="product__rate">{%- include "rate_reviews" -%}</div>
         </div>
     </div>
+
+
