--- a/web-flair/app/sass/blocks/product/_product.sass
+++ b/web-flair/app/sass/blocks/product/_product.sass
@@ -25,15 +25,16 @@
 	font-family: $bold
 	text-transform: uppercase
 
-	&__link
-		color: #cbb6a7
-
-		&:hover
-			color: #cbb6a7
-
 
 .product__descr
 	font-size: 14px
+
+	&__link
+		color: #000
+
+		&:hover
+			color: #000
+
 
 .product__price
 	font-family: $bold
