--- a/snippets/product-card-list.liquid
+++ b/snippets/product-card-list.liquid
@@ -1,3 +1,3 @@
-<div class="col-6 col-lg-3 catalog-home-page__item">
+<div class="col-6 col-lg-4 main-category__product" id="product-{{ forloop.index | plus:paginate.current_offset }}">
    {%-  include 'product_detail' -%}
 </div>
